results/SVCOMP/specgen/log-Cookie-2024_02_25_13_49_56.txt
public class Cookie {

  private /*@ spec_public @*/ String name;
  private /*@ spec_public @*/ String value;

  //@ requires name != null && value != null;
  //@ assignable this.name, this.value;
  //@ ensures this.name == name && this.value == value;
  public Cookie(String name, String value) {
    this.name = name;
    this.value = value;
  }

  //@ ensures \result != null;
  public String getName() {
    return name;
  }

  //@ ensures \result != null;
  public String getValue() {
    return value;
  }
}
/home/max/Documents/JMLGPT/tmp/Cookie.java:7: error: References to 'this' are not permitted in constructor assignable clauses: this
  //@ assignable this.name, this.value;
                 ^
/home/max/Documents/JMLGPT/tmp/Cookie.java:7: error: References to 'this' are not permitted in constructor assignable clauses: this
  //@ assignable this.name, this.value;
                            ^
2 errors

public class Cookie {

  private /*@ spec_public @*/ String name;
  private /*@ spec_public @*/ String value;

  //@ requires name != null && value != null;
  //@ assignable name, value;
  //@ ensures this.name == name && this.value == value;
  public Cookie(String name, String value) {
    this.name = name;
    this.value = value;
  }

  //@ ensures \result != null;
  public String getName() {
    return name;
  }

  //@ ensures \result != null;
  public String getValue() {
    return value;
  }
}
/home/max/Documents/JMLGPT/tmp/Cookie.java:7: error: An assignable clause may not contain method formal parameters: name
  //@ assignable name, value;
                 ^
/home/max/Documents/JMLGPT/tmp/Cookie.java:7: error: An assignable clause may not contain method formal parameters: value
  //@ assignable name, value;
                       ^
2 errors

public class Cookie {

  private /*@ spec_public @*/ String name;
  private /*@ spec_public @*/ String value;

  //@ requires name != null && value != null;
  //@ assignable \nothing;
  //@ ensures this.name == name && this.value == value;
  public Cookie(String name, String value) {
    this.name = name;
    this.value = value;
  }

  //@ ensures \result != null;
  public String getName() {
    return name;
  }

  //@ ensures \result != null;
  public String getValue() {
    return value;
  }
}

